# quantafold

./: .gitignore  .windsurfrules  README.md  code_change.py  code_change_old.py  pyproject.toml  requirements.txt
demos_01/: prompt.md
docs/: 01-tech.md  02-litellm.md  03-spec.md  04-spec-litellm.md  05-reflexion-generic-tools.md
src/: main.py  main2.py
src/core/: agent.py  agent2.py  agent_template.py  config.py  generative_model.py  manager.py  reagent.py  response_types.py
src/model/: enums.py  observation.py  step.py  task.py
src/models/: choice.py  message.py  pydantic_to_xml.py  response.py  response_bs4_xml_parser.py  response_parser.py  response_xml_parser.py  responsestats.py  shell_command.py  tool.py
src/tools/: beautifulsoup.py  display_content.py  duckduckgo.py  file_reader.py  file_tree.py  file_writer.py  llm_agent.py  markdown_converter.py  shell_command.py  tool.py  user_input.py  wikipedia.py
src/utility/: display_utils.py
task/: 01-template.md  02-replace-json-by-xml.md  02-replace-json-reply.md  03-bis-response.md  03-improve-task-history.md  04-bis-anwser.md  04-improve-tool-support.md  05-bis-improve-tool-support.md  05-improve-tool-support.md  06-bis-improve-tool-parameters-support.md  06-improve-tool-parameters-support.md  06-ter-improve-tool-parameters-support.md  07-bis.md  07-create-llm-tool.md  08-refactor-agent.md  09-data-model-extract.md
tests/: conftest.py  test_file_tools.py  test_main.py  test_markdown_converter.py
