[tool.poetry]
name = "ai-super-agent"
version = "0.1.0"
description = "An AI Super Agent implementation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"
litellm = "^1.10.1"
wikipedia = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
isort = "^5.12.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "N", "W", "B", "COM", "C4", "UP", "PT", "RET", "SIM"]
extend-ignore = ["E501", "COM812","UP006","UP035"]  # Example of extending ignored rules including COM812


